Replace tag revision with updated time, treat as dependency
